crates/tlang_test_runner/src/snapshots/tlang_test_runner__tests__known_failures_counter_closures_javascript@known_failures__counter_closures.tlang.snap
---
source: crates/tlang_test_runner/src/main.rs
description: Known failure - output may not match expected
expression: apply_redactions(&output)
input_file: tests/known_failures/counter_closures.tlang
---
[stdin]:215
    return if (times > 0) {
           ^^

SyntaxError: Unexpected token 'if'
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [STDIN_WRAPPER]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_CORE_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]

Node.js [VERSION]
